refactor db entities, write init db for testing, update user info api, create product api